package DOO.OCP.OCP04Alternativa.SISTEMA;

public abstract class EvaluadorBecas {
    public abstract void evaluar(Alumno alumno);
}
